--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencyManagement {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
@@ -59,7 +60,9 @@ dependencies {
     implementation 'io.github.resilience4j:resilience4j-circuitbreaker'
     implementation 'io.github.resilience4j:resilience4j-retry'
     implementation 'io.github.resilience4j:resilience4j-timelimiter'
+    implementation 'io.github.resilience4j:resilience4j-reactor'
     implementation 'com.bucket4j:bucket4j_jdk17-core:8.14.0'
+    implementation 'com.knuddels:jtokkit:1.1.0'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.testcontainers:junit-jupiter'
