Добавлен гибридный поиск с RRF и улучшен потоковый API для передачи структурированных данных.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -191,3 +191,7 @@ app:
     scheduler:
       # Задержка между запусками планировщика индексации документов
       delay-ms: 10000 # 10 секунд
+  http-client:
+    connect-timeout: 10s # Таймаут на установку TCP-соединения
+    response-timeout: 120s # Общий таймаут на получение ответа (включая установку соединения)
+    read-write-timeout: 120s # Таймаут на чтение/запись отдельных пакетов данных
