--- a/build.gradle
+++ b/build.gradle
@@ -14,59 +14,66 @@ java {
 ext {
     springAiVersion = '1.0.1'
     mapstructVersion = '1.5.5.Final'
-    testcontainersVersion = '1.21.3'
-    lombokVersion = '1.18.38'
+    testcontainersVersion = '1.19.8'
+    lombokVersion = '1.18.32'
+    resilience4jVersion = '2.3.0'
 }
 
 repositories {
     mavenCentral()
+    maven { url 'https://repo.spring.io/milestone' }
 }
 
 dependencyManagement {
     imports {
         mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
-        mavenBom "io.github.resilience4j:resilience4j-bom:2.3.0"
         mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
+        mavenBom "io.github.resilience4j:resilience4j-bom:${resilience4jVersion}"
     }
 }
 
 dependencies {
+    // Spring Boot Starters
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
 
-    implementation 'org.springframework.ai:spring-ai-model'
-    implementation 'org.springframework.ai:spring-ai-client-chat'
-    implementation 'org.springframework.ai:spring-ai-vector-store'
+    // Spring AI
     implementation 'org.springframework.ai:spring-ai-starter-model-ollama'
     implementation 'org.springframework.ai:spring-ai-starter-vector-store-pgvector'
 
+    // База данных
     runtimeOnly 'org.postgresql:postgresql'
     implementation 'org.flywaydb:flyway-core'
     implementation 'org.flywaydb:flyway-database-postgresql'
 
+    // Утилиты и Code Generation
     compileOnly "org.projectlombok:lombok:${lombokVersion}"
     annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
     implementation "org.mapstruct:mapstruct:${mapstructVersion}"
     annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
     annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
 
+    // Observability & Docs
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
     implementation 'io.micrometer:micrometer-registry-prometheus'
+
+    // Отказоустойчивость и RAG-компоненты
     implementation 'io.github.resilience4j:resilience4j-spring-boot3'
-    implementation 'io.github.resilience4j:resilience4j-circuitbreaker'
-    implementation 'io.github.resilience4j:resilience4j-retry'
-    implementation 'io.github.resilience4j:resilience4j-timelimiter'
     implementation 'io.github.resilience4j:resilience4j-reactor'
     implementation 'com.bucket4j:bucket4j_jdk17-core:8.14.0'
     implementation 'com.knuddels:jtokkit:1.1.0'
 
+    // Тестирование
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.testcontainers:junit-jupiter'
     testImplementation 'org.testcontainers:postgresql'
+    testImplementation 'io.projectreactor:reactor-test'
+    testImplementation 'org.awaitility:awaitility:4.2.1'
 }
 
 tasks.withType(Test) {
