--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,119 +4,98 @@
 server:
   port: 8080 # Порт, на котором будет работать приложение
   error:
-    # Включать stacktrace в ответ об ошибке только при наличии параметра `trace=true`
+    # Включать stacktrace в ответ об ошибке только при наличии параметра ?trace=true.
+    # Безопасная настройка для production.
     include-stacktrace: on_param
 
-# ===================================================================
-# Настройки Spring Boot
-# ===================================================================
 spring:
   application:
     name: rag-ollama-service # Имя приложения, используется в логах и метриках
   lifecycle:
-    # Таймаут для корректного завершения работы приложения
-    timeout-per-shutdown-phase: 30s
-
-  # Настройки Web MVC
+    timeout-per-shutdown-phase: 30s # Таймаут для корректного завершения работы приложения (graceful shutdown)
   mvc:
     async:
-      # Таймаут для асинхронных запросов (@Async, CompletableFuture в контроллерах).
-      # Должен быть больше, чем самый долгий таймаут в Resilience4j (120s).
+      # Таймаут для асинхронных запросов в контроллерах.
+      # ВАЖНО: Должен быть немного больше, чем таймаут в Resilience4j (timelimiter),
+      # чтобы дать механизму отказоустойчивости сработать первым.
       request-timeout: 130s
 
-  # Настройки пулов потоков для асинхронных задач
-  task:
-    execution:
-      pool:
-        core-size: 4
-        max-size: 10
-      shutdown:
-        await-termination: true
-        await-termination-period: 30s
-    scheduling:
-      shutdown:
-        await-termination: true
-        await-termination-period: 30s
-
-  # --- Настройки подключения к базе данных (PostgreSQL) ---
+  # --- Database & Persistence ---
   datasource:
+    # Данные для подключения к PostgreSQL, запущенному в Docker Compose.
     url: jdbc:postgresql://localhost:5432/ragdb
     username: user
     password: password
     driver-class-name: org.postgresql.Driver
-
-  # --- Настройки JPA и Hibernate ---
   jpa:
-    # `validate`: проверять схему БД на соответствие сущностям при старте
+    # `validate`: Проверять схему БД на соответствие сущностям при старте.
+    # Самый безопасный вариант для production, предотвращающий случайные изменения схемы.
     hibernate:
       ddl-auto: validate
-    show-sql: true # Показывать генерируемые SQL-запросы в логах
+    show-sql: false # !!! PRODUCTION: Установить в `false` для снижения объема логов и повышения производительности.
     properties:
       hibernate:
-        format_sql: true # Форматировать SQL-запросы для лучшей читаемости
-
-  # --- Настройки миграций базы данных Flyway ---
+        format_sql: true # Форматирует SQL для лучшей читаемости в логах.
   flyway:
     enabled: true
-    locations: classpath:db/migration # Путь к SQL-миграциям
-
-  # --- Настройки кэширования (Caffeine) ---
+    locations: classpath:db/migration # Путь к SQL-миграциям.
   cache:
     cache-names:
-      - vector_search_results # Кэш для результатов RAG-запросов
-      - token_counts # Кэш для подсчета токенов
+      - vector_search_results # Кэш для результатов RAG-поиска.
+      - token_counts # Кэш для подсчета токенов.
     caffeine:
-      # Настройки кэша: макс. 500 записей, время жизни записи 10 минут
+      # Настройки кэша: макс. 500 записей, время жизни записи 10 минут.
       spec: maximumSize=500,expireAfterWrite=10m
 
   # ===================================================================
-  # Настройки Spring AI
+  # AI & RAG Pipeline Configuration
   # ===================================================================
   ai:
     ollama:
-      base-url: http://localhost:11434 # URL запущенного сервиса Ollama
+      # ВАЖНО: При запуске приложения на хост-машине используется `localhost`.
+      # Если бы приложение запускалось в Docker в той же сети,
+      # нужно было бы использовать имя сервиса: `http://rag-ollama:11434`.
+      base-url: http://localhost:11434
       chat:
         options:
-          model: llama3 # Модель для генерации текста
-          temperature: 0.7 # Уровень "креативности" модели (0.0 - детерминированный, 1.0 - макс. креативный)
-          max-tokens: 2048 # Максимальное количество токенов в ответе
+          model: llama3 # Модель для генерации текста.
+          temperature: 0.7 # "Креативность" модели (0.0 - строго, >1.0 - очень креативно).
+          max-tokens: 2048 # Максимальное количество токенов в ответе.
       embedding:
         options:
-          model: mxbai-embed-large # Модель для создания векторных представлений (эмбеддингов)
+          # Модель для создания векторных представлений (эмбеддингов).
+          model: mxbai-embed-large
     vectorstore:
       pgvector:
-        table-name: vector_store # Имя таблицы для хранения векторов
-        index-type: HNSW # Тип индекса для быстрого поиска (Hierarchical Navigable Small World)
-        distance-type: COSINE_DISTANCE # Метрика для измерения схожести векторов (косинусное расстояние)
-        dimensions: 1024 # Размерность вектора (зависит от embedding-модели)
+        table-name: vector_store # Имя таблицы для хранения векторов.
+        index-type: HNSW # Тип индекса для быстрого поиска (Hierarchical Navigable Small World).
+        distance-type: COSINE_DISTANCE # Метрика для измерения схожести векторов.
+        dimensions: 1024 # Размерность вектора (зависит от embedding-модели).
 
 # ===================================================================
-# Настройки Actuator для мониторинга (Observability)
+# Observability (Monitoring & Metrics)
 # ===================================================================
 management:
   endpoints:
     web:
       exposure:
-        # Эндпоинты, доступные по HTTP
-        include: health, info, prometheus, metrics
+        include: health, info, prometheus, metrics # Эндпоинты, доступные по HTTP.
   endpoint:
     health:
-      # Показывать детали состояния компонентов только авторизованным пользователям (или всегда, если security отключен)
-      show-details: when_authorized
+      show-details: when_authorized # Показывать детали для health-чеков.
   metrics:
     tags:
-      # Глобальный тег, который будет добавляться ко всем метрикам
-      application: ${spring.application.name}
+      application: ${spring.application.name} # Глобальный тег для всех метрик.
     distribution:
-      # Включить гистограммы для метрики времени ответа HTTP-сервера
+      # Включить гистограммы для метрики времени ответа HTTP-сервера.
       percentiles-histogram:
         http.server.requests: true
-      # Определить "корзины" (SLA) для гистограмм времени ответа
+      # Определить "корзины" (SLA) для гистограмм времени ответа.
       sla:
         http.server.requests: 50ms, 100ms, 200ms, 500ms, 1s, 2s
 
 # ===================================================================
-# Настройки OpenAPI / Swagger
+# API Documentation (OpenAPI / Swagger)
 # ===================================================================
 springdoc:
   api-docs:
@@ -127,45 +106,41 @@ springdoc:
   default-produces-media-type: application/json
 
 # ===================================================================
-# Настройки отказоустойчивости (Resilience4j)
+# Resilience & Fault Tolerance (Resilience4j)
 # ===================================================================
 resilience4j:
   circuitbreaker:
     instances:
       ollama: # Единственная, правильно названная конфигурация для Ollama
         register-health-indicator: true
-        sliding-window-size: 10
-        minimum-number-of-calls: 3
-        permitted-number-of-calls-in-half-open-state: 2
-        automatic-transition-from-open-to-half-open-enabled: true
-        wait-duration-in-open-state: 15s
-        failure-rate-threshold: 60
-        event-consumer-buffer-size: 10
+        sliding-window-size: 10 # Количество вызовов для анализа.
+        minimum-number-of-calls: 3 # Мин. вызовов для срабатывания.
+        failure-rate-threshold: 60 # % ошибок для размыкания цепи.
+        wait-duration-in-open-state: 15s # Время в "разомкнутом" состоянии.
   retry:
     instances:
       ollama:
-        max-attempts: 2
-        wait-duration: 5s
-        # Важно: указываем исключения, при которых нужно делать повтор
+        max-attempts: 2                  # Макс. количество попыток (1-я + 1 повторная).
+        wait-duration: 5s                # Пауза между попытками.
+        # Повторять только при явных сетевых ошибках или таймаутах, а не при 5xx ответах.
         retry-on-exception: "org.springframework.web.reactive.function.client.WebClientRequestException, org.springframework.web.client.ResourceAccessException, java.util.concurrent.TimeoutException"
   timelimiter:
     instances:
       ollama:
-        timeout-duration: 120s # 2 минуты таймаут для генерации
+        timeout-duration: 120s           # Макс. время ожидания ответа от LLM.
         cancel-running-future: true
 
 # ===================================================================
-# Кастомные настройки приложения
+# Custom Application Properties (app.*)
 # ===================================================================
 app:
   prompt:
-    # Путь к шаблону промпта для RAG
-    rag-template-path: "prompts/rag-prompt.tmpl"
+    rag-template-path: "prompts/rag-prompt.tmpl" # Путь к шаблону промпта для RAG
   reranking:
-    enabled: true # Включить/выключить переранжирование
-    keyword-match-boost: 0.1 # "Бонус" к релевантности за совпадение ключевого слова
+    enabled: true
+    keyword-match-boost: 0.1
   rate-limiting:
-    enabled: true # Включить/выключить ограничение частоты запросов
+    enabled: true
     limits:
       - endpoint: "/api/v1/rag/query"
         capacity: 10 # 10 запросов
@@ -174,24 +149,28 @@ app:
         capacity: 20
         refill-period-minutes: 1
   tokenization:
-    # Модель кодирования для токенизатора.
-    # "o200k_base" используется для Llama 3, Mistral.
-    # Для моделей OpenAI (GPT-4, GPT-3.5) следует использовать "cl100k_base".
+    # "o200k_base" - для Llama 3, Mistral.
+    # "cl100k_base" - для моделей OpenAI (GPT-4, GPT-3.5).
     encoding-model: "o200k_base"
   context:
-    # Максимальное количество токенов, выделяемое под контекст из документов.
-    # Оставляем запас для системного промпта, вопроса пользователя и генерации ответа.
-    # Llama-3 имеет окно 8k, поэтому 4k - безопасный лимит.
+    # Макс. кол-во токенов под контекст. Оставляем запас для системного промпта,
+    # вопроса пользователя и генерации ответа. Для Llama-3 (8k) 4k - безопасный лимит.
     max-tokens: 4096
   chat:
     history:
-      # Количество последних сообщений, загружаемых для поддержания контекста
+      # Количество последних сообщений для поддержания контекста.
       max-messages: 10
   ingestion:
     scheduler:
-      # Задержка между запусками планировщика индексации документов
-      delay-ms: 10000 # 10 секунд
+      delay-ms: 10000 # 10 секунд между проверками очереди.
+    batch-size: 10 # Кол-во документов, обрабатываемых за один раз.
   http-client:
     connect-timeout: 10s # Таймаут на установку TCP-соединения
     response-timeout: 120s # Общий таймаут на получение ответа (включая установку соединения)
     read-write-timeout: 120s # Таймаут на чтение/запись отдельных пакетов данных
+  task-executor:
+    # Настройки основного пула потоков для @Async задач.
+    core-pool-size: 4
+    max-pool-size: 16
+    queue-capacity: 100
+    thread-name-prefix: "app-async-"
